2007-12-31  Sam Steingold  <sds@gnu.org>

	Rename EXT:DELETE-DIR, EXT:MAKE-DIR, and EXT:RENAME-DIR to
	EXT:DELETE-DIRECTORY, EXT:MAKE-DIRECTORY, and EXT:RENAME-DIRECTORY,
	respectively, for consistency with EXT:PROBE-DIRECTORY,
	EXT:DEFAULT-DIRECTORY and CL:PATHNAME-DIRECTORY.
	* constsym.d, eval.d, init.lisp, pathname.d, subr.d: do the renaming
	* deprecated.lisp (delete-dir, make-dir, rename-dir): deprecate
	* modules/syscalls/calls.c (COPY-FILE): use L(make_directory)

2007-12-31  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1860677 ]: DIRECTORY of dirs ignores :FULL
	* pathname.d (pack_full_info, with_stat_info_computed): add
	(get_time_size) [WIN32_NATIVE]: add
	(with_stat_info_arg) [UNIX]: add
	(directory_search_scandir) [WIN32_NATIVE]: use get_time_size()
	and pack_full_info()
	(directory_search): use with_stat_info_computed() for directories

2007-12-31  Sam Steingold  <sds@gnu.org>

	* pathname.d (push, PUSH_ON_STACK): add inline & macro wrapper
	(copy_pathname_and_add_subdir, directory_search_scandir)
	(directory_search): use it
	(pathname_add_subdir): do not pass arguments on the STACK

2007-12-30  Sam Steingold  <sds@gnu.org>

	avoid goto and return from inside with_string_0
	* pathname.d (delete_file_if_exists_obj, realpath_obj, stat_obj)
	(open_output_file_obj, create_backup_file_obj): add
	(assure_dir_exists): use realpath_obj()
	(directory_exists, directory_search_hash): use stat_obj()
	(DELETE-FILE): use delete_file_if_exists_obj()
	(open_file): use open_output_file_obj() & create_backup_file_obj()

2007-12-30  Sam Steingold  <sds@gnu.org>

	fix bug [ 1860489 ]: deletion of symlinks into non-existent dirs fails
	* pathname.d (DELETE-FILE): when the directory does not exist,
	still remove the link, just skip check_delete_open()

2007-12-30  Sam Steingold  <sds@gnu.org>

	additional 5% speedup in simple sequence tests: switch instead of if
	* lispbibl.d (fastcmp_t): new type
	(subr_t): split uintW seclass into uintB seclass and uintB fastcmp