@@ -1,5 +1,9 @@
 2007-12-31  Sam Steingold  <sds@gnu.org>
 
+	* pathname.d, win32aux.d: use true/false instead of TRUE/FALSE
+
+2007-12-31  Sam Steingold  <sds@gnu.org>
+
 	Rename EXT:DELETE-DIR, EXT:MAKE-DIR, and EXT:RENAME-DIR to
 	EXT:DELETE-DIRECTORY, EXT:MAKE-DIRECTORY, and EXT:RENAME-DIRECTORY,
 	respectively, for consistency with EXT:PROBE-DIRECTORY,
